# Pershit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: fragmentCellBoard.glsl  fragmentCellBoard.spirv  fragmentDefault.glsl  fragmentDefault.spirv  vertexCellBoard.glsl  vertexCellBoard.spirv  vertexDefault.glsl  vertexDefault.spirv
includes/: ps_window.hpp  sgjk_head.hpp  sparse_vector.hpp
includes/ps_window/: ps_window_win.hpp
src/: icon  main.cpp  object_models_colliders  sgjk_glm.hpp  tiny_font  wirender.cpp  wirender.hpp
tests/circle/: main.cpp  render.cpp  render.hpp
tests/gjk_graphics/: main.cpp  render.cpp  render.hpp
tests/minigame/: main.cpp  wirender.cpp  wirender.hpp
vulkan_not_found_includes/Licenses/: LICENSE.txt
